refacto: some cleanup
APIM-7865